--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                     <img class="pp2" src="Images/pp2.jpg">
                 </div>
                 <div class="profile text">
-                    <h3>Who am I ?</h3>
+                    <h3 class="about">Who am I ?</h3>
                     <p>Hello and welcome, I am Thomas a former hospitality employee that wanted to see new horizons. After working in various restaurants in different countries, I felt the need to be challenged again.<br>What's best for that than learn a whole new field ? That's why I decided to join the renowned Epitech school !<br>Here you will be able to see my school projects, past and upcoming. Enjoy !</p>
-                    <h3>Education</h3>
+                    <h3 class="about">Education</h3>
                         <ul>
                             <li class="education">Jean-Mermoz Highschool - 68300 Saint-Louis<br>Baccalauréat - 2011</li>
                             <li class="education">Department of Human and Social Sciences - 67000 Strasbourg's University<br>Bachelor degree in Education Science - 2017</li>
                             <li class="education">Epitech - 67000 Strasbourg<br>Master's degree in Computer Sciences - 2027</li>
                         </ul>
                     <div class="skill">
-                        <h3 class="skill">Skills</h3>
+                        <h3 class="skill about">Skills</h3>
                         <ul>
                             <li class="skill"><h5>html</h5>
                                 <span class="bar"><span class="html"></span></span>
@@ -99,7 +99,7 @@
 
                 <div class="cards">
                     <img class="card-img" src="Images/project3.jpg">
-                    <h3 class="card-project">Work in Progress</h3>
+                    <h3 class="card-project">Amazon</h3>
                     <p class="card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut quo voluptatibus, quasi perspiciatis ipsa, reiciendis aperiam distinctio expedita adipisci, excepturi rerum ratione earum? Reprehenderit.</p>
                     <button class="review"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">review project</a></button>
                 </div>
